# gittracker

./: AGENTS.md  README.md  i18next.config.ts  index.html  package-lock.json  package.json  vitest.config.ts
docs/: DOCS-FEATURE.md  DOCS-MOCKUP.html  DOCS-PLAN.html  PROMPTS.md
docs/goal/: goal.md
docs/mockups/: activity-center-unified.html  commit-history-all-branches.html  gittracker-shadcn-ia-v2.html  pr-commit-history-ai-merge.html  project-block-simple.html  project-card-minimal.html  run-feature.html  ui-information-architecture.html
mockups/: gittracker-shadcn.html  project-card-v2.html  project-detail.html  ui-information-architecture.html
src/: App.css  App.tsx  api.ts  i18n.test.ts  i18n.ts  i18next.d.ts  index.css  main.tsx  resources.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  fs_safe.rs  lib.rs  log_diary.rs  main.rs  models.rs  path_env.rs  store.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/docs/: mod.rs
src-tauri/src/git/: mod.rs  operation.rs  ops.rs  pull_requests.rs  status.rs
src-tauri/src/run/: mod.rs
src-tauri/src/upgrade/: mod.rs
src-tauri/src/watch/: mod.rs
src/components/: ActivitySidePanel.css  ActivitySidePanel.tsx  AiSidePanel.css  AiSidePanel.tsx  AppSidebar.css  AppSidebar.tsx  ChangedFileDialog.tsx  ChangesDialog.tsx  CommitDialog.tsx  DailyCompletionPage.css  DailyCompletionPage.tsx  Dialog.css  DiscardDialog.tsx  DocumentLibraryTab.tsx  EvolutionPage.css  EvolutionPage.tsx  GitStatusIcon.tsx  HelpTip.css  HelpTip.tsx  (+11 more)
(+23 files in other folders)
