[package]
name = "gittracker"
version = "0.1.0"
description = "Lightweight multi-project Git dashboard for macOS"
authors = ["GitTracker"]
edition = "2021"

[lib]
name = "gittracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
notify-debouncer-mini = "0.7"
dirs = "6"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
